completed the formatter
